@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 11-06-2006 added: builtin command, xbmc.KaiConnection.     Change kai connection status (connect/disconnect).
+ - 11-06-2006 added: System.kaienabled conditional visibility tag.
  - 11-06-2006 added: System.dvdready and System.trayopen conditional visibility tag.
  - 11-06-2006 fixed: Added additional late check for X+Y button combo for debugging.
  - 11-06-2006 changed: Added black border around freemem and remote code info for better readability.
